--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,9 @@
         "-e",
         "AWS_SECRET_ACCESS_KEY=${env:AWS_SECRET_ACCESS_KEY}",
         "-e",
-        "AWS_DEFAULT_REGION=${env:AWS_REGION}"
+        "AWS_DEFAULT_REGION=${env:AWS_REGION}",
+        "-e",
+        "CELL_PHONE_NUMBER=${env:CELL_PHONE_NUMBER}"
     ],
     "appPort": [],
     // Use 'settings' to set *default* container specific settings.json values on container create. 
